--- a/Console_Invoice_Orders.cbp
+++ b/Console_Invoice_Orders.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Midterm Test" />
+		<Option title=" Console_Invoice_Orders" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Midterm Test" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/ Console_Invoice_Orders" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Midterm Test" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/ Console_Invoice_Orders" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
